Got the menu to inflate the way I want it to, now need to theink of how to make it scrolling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="wrapper clearfix">
         <div class="content clearfix">
             <div class="main clearfix">
-                <div id="nav-box" class="box" >
+                <div id="nav-box" class="box clearfix" >
                 </div>
                 <div id="menu" class="clearfix" >
                     <h1> MENU </h1>
@@ -40,7 +40,7 @@
                 <div class="block col-xs-12 col-sm-6 col-lg-3 logo blank">
                     <h1> LOGO </h1>
                 </div>
-                <div class="block col-xs-12 col-sm-6 col-lg-3">
+                <div class="block col-xs-12 col-sm-6 col-lg-3 hidden-xs">
                     <h1> WELCOME </h1>
                 </div>
                 <div class="block col-lg-3 visible-lg blank">
