--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 <body>
     <div class="wrapper clearfix">
+        <div class="hide-blocks"></div>
         <div class="content clearfix">
             <div class="main clearfix">
                 <div id="nav-box" class="box clearfix" >
@@ -30,11 +31,11 @@
                     <h1> MENU </h1>
                 </div>
                 <nav class="clearfix">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a</li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">Contact</a></li>
+                    <ul class="clearfix">
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">BIO</a></li>
+                        <li><a href="#">EXPERIENCE</a></li>
+                        <li><a href="#">CONTACT INFO</a></li>
                     </ul>
                 </nav>
                 <div class="block col-xs-12 col-sm-6 col-lg-3 logo blank">
@@ -47,10 +48,10 @@
 
                 </div>
                 <div class="block col-xs-12 col-sm-6 col-lg-3">
-                    <h1> ABOUT </h1>
+                    <h1> BIO  </h1>
                 </div>
                 <div class="block col-xs-12 col-sm-6 col-lg-3">
-                    <h1> WHAT I DO </h1>
+                    <h1> EXPERIENCE </h1>
                 </div>
 
                 <div class="block col-lg-3 visible-lg blank">
@@ -58,7 +59,7 @@
                 </div>
 
                 <div class="block col-xs-12 col-sm-6 col-lg-3">
-                    <h1> CONTACT ME </h1>
+                    <h1> CONTACT INFO </h1>
                 </div>
                 <div class="block col-lg-3 visible-lg pattern">
 
