Fixed menu styles, h1s now defined in rems, added in socail media icons

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <!-- BOOT STRAP-->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    
+    <!-- font awesome -->
+    <link  rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
 
     <!-- CUSTOM -->
     <link rel="stylesheet" href="styles/site.css">
     <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="styles/socail.css">
 
     <script src="scripts/scale.js" defer></script>
     <script src="scripts/menu.js" defer></script>
@@ -32,17 +36,17 @@
                 </div>
                 <nav class="clearfix">
                     <ul class="clearfix">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">BIO</a></li>
-                        <li><a href="#">EXPERIENCE</a></li>
-                        <li><a href="#">CONTACT INFO</a></li>
+                        <li><a href="#"><h1>HOME</h1></a></li>
+                        <li><a href="#"><h1>BIO</h1></a></li>
+                        <li><a href="#"><h1>EXPERIENCE</h1></a></li>
+                        <li><a href="#"><h1>CONTACT INFO</h1></a></li>
                     </ul>
                 </nav>
                 <div class="block col-xs-12 col-sm-6 col-lg-3 logo blank">
-                    <h1> LOGO </h1>
+                    <h2> LOGO </h2>
                 </div>
                 <div class="block col-xs-12 col-sm-6 col-lg-3 hidden-xs">
-                    <h1> WELCOME </h1>
+                    <h2> WELCOME </h2>
                 </div>
                 <div class="block col-lg-3 visible-lg blank">
 
@@ -67,8 +71,13 @@
                 <div class="block col-lg-3 visible-lg blank">
 
                 </div>
-                <div class="block col-xs-12 col-sm-6 col-lg-3">
-                    <h1> SOCAIL ICONS </h1>
+                <div class="block  socail-block col-xs-12 col-sm-6 col-lg-3">
+                    <h1> Find me on: </h1>
+                    <div class="socail-icons clearfix">            
+                        <div class="icon"><a href="#"> <i class="fa fa-linkedin"></i> </a> </div>
+                        <div class="icon"><a href="#" class="github"> <i class="fa fa-github"></i> </a> </div>
+                        <div class="icon"><a href="#"> <i class="fa fa-stack-overflow"></i> </a></div>
+                    </div>
                 </div>
 
                 <div class="block col-lg-3 visible-lg pattern">
