--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     </div>
                 </div>
                 <div class="block col-xs-12 col-sm-6 col-lg-3 hidden-xs">
-                    <div class="welcome">
+                    <div class="welcome col-sm-12">
                         <h1> WELCOME </h1>
-                        <h2> My name's Matt.</h2>
+                        <h2> My name is Matt Catellier.</h2>
                         <h2> I'm a full-stack developer. </h2>
                         <h2> This is my online portfolio. </h2>
                     </div>
