--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Matt Catellier - Software Systems Developer </title>
-
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <!-- jQuery 2.2.0 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <!-- jQuery transit links -->
