--- a/public/index.html
+++ b/public/index.html
@@ -1,149 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title> Matt Catellier - Software Systems Developer </title>
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
-    <!-- jQuery 2.2.0 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <!-- jQuery transit links -->
-    <script type="text/javascript" src="scripts/jquery.transit/jquery.transit.js"></script>
 
-    <!-- BOOT STRAP-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    
-    <!-- font awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <!-- fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Cabin:600italic,600' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
+    <head>
+        <meta charset="UTF-8">
+        <title> Matt Catellier - Software Systems Developer </title>
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 
-    <!-- CUSTOM -->
-    <link rel="stylesheet" href="styles/site.css">
-    <link rel="stylesheet" href="styles/menu.css">
-    <link rel="stylesheet" href="styles/logo.css">
-    <link rel="stylesheet" href="styles/welcome.css">
-    <link rel="stylesheet" href="styles/contact-icon.css">
-    <link rel="stylesheet" href="styles/socail.css">
+        <!-- jQuery 2.2.0 -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <!-- jQuery transit links -->
+        <script src="http://ricostacruz.com/jquery.transit/jquery.transit.js"></script>
 
-    <script src="scripts/scale.js" defer></script>
-    <script src="scripts/menu.js" defer></script>
-    <script src="scripts/effects.js" defer></script>
+        <!-- BOOT STRAP-->
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-</head>
-<body>
-    <div class="wrapper clearfix">
-        <div class="hide-blocks"></div>
-        <div class="content clearfix">
-            <div class="main clearfix">
-                <div id="nav-box" class="box clearfix" >
-                </div>
-                <div id="menu" class="clearfix">
-                    <i class="fa fa-bars" aria-hidden="true" title="Skip to main navigation"></i>
-                </div>
-                <nav class="clearfix">
-                    <ul class="clearfix">
-                        <li><a href="index.html"><h1>HOME</h1></a></li>
-                        <li><a href="about.html"><h1>ABOUT ME</h1></a></li>
-                        <li><a href="portfolio.html"><h1>PAST PROJECTS</h1></a></li>
-                        <li><a href="contact.html"><h1>CONTACT INFO</h1></a></li>
-                    </ul>
-                </nav>
-                <div id="logo-block" class="block col-xs-12 col-sm-6 col-lg-3 logo white">
-                    <div class="logo center">
-                        <img src="images/logo.png" alt="logo">
-                        <h1> Matt Catellier </h1>
+        <!-- font awesome -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <!-- fonts -->
+        <link href='https://fonts.googleapis.com/css?family=Cabin:600italic,600' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css'>
+
+        <!-- CUSTOM -->
+        <link rel="stylesheet" href="styles/site.css">
+        <link rel="stylesheet" href="styles/menu.css">
+        <link rel="stylesheet" href="styles/logo.css">
+        <link rel="stylesheet" href="styles/welcome.css">
+        <link rel="stylesheet" href="styles/contact-icon.css">
+        <link rel="stylesheet" href="styles/socail.css">
+
+        <script src="build/app.js" defer></script>
+
+    </head>
+
+    <body>
+        <div class="wrapper clearfix">
+            <div class="hide-blocks"></div>
+            <div class="content clearfix">
+                <div class="main clearfix">
+                    <div id="nav-box" class="box clearfix">
                     </div>
-                </div>
-                <div id="about-block" class="block col-xs-12 col-sm-6 col-lg-3 teal">
-                    <a href="about.html" class="clearfix">
-                        <h1> ABOUT ME  </h1>
-                        <div class="bio-icon center">
-                            <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
-                            <h2 class="sliding-middle-out"></h2>
+                    <div id="menu" class="clearfix">
+                        <i class="fa fa-bars" aria-hidden="true" title="Skip to main navigation"></i>
+                    </div>
+                    <nav class="clearfix">
+                        <ul class="clearfix">
+                            <li><a href="index.html"><h1>HOME</h1></a></li>
+                            <li><a href="about.html"><h1>ABOUT ME</h1></a></li>
+                            <li><a href="portfolio.html"><h1>PAST PROJECTS</h1></a></li>
+                            <li><a href="contact.html"><h1>CONTACT INFO</h1></a></li>
+                        </ul>
+                    </nav>
+                    <div id="logo-block" class="block col-xs-12 col-sm-6 col-lg-3 logo white">
+                        <div class="logo center">
+                            <img src="images/logo.png" alt="logo">
+                            <h1> Matt Catellier </h1>
                         </div>
-                    </a>
-                </div>
-                <div class="block col-lg-3 visible-lg darkblue"></div>
-                <div class="welcome-block block col-xs-12 col-sm-6 col-lg-3 hidden-xs hidden-lg darkblue">
-                    <div class="welcome col-sm-12">
-                        <h1> WELCOME </h1>
-                        <h2> My name is Matt Catellier.</h2>
-                        <h2> I'm a full-stack web developer. </h2>
-                        <h2> This is my online portfolio. </h2>
                     </div>
-                </div>
-                <div class="socail-block block col-lg-3 visible-lg white">
-                    <h1> Find me on:</h1>
-                    <div class="socail-icons center clearfix">
-                        <div class="icon darkblue"><a href="https://ca.linkedin.com/in/matthew-catellier-06995167"> <i class="fa fa-linkedin"></i> </a> </div>
-                        <div class="icon darkblue"><a href="https://github.com/matt-catellier" class="github"> <i class="fa fa-github"></i> </a> </div>
-                        <div class="icon darkblue"><a href="http://stackoverflow.com/users/5724880/matt-catellier"> <i class="fa fa-stack-overflow"></i> </a></div>
+                    <div id="about-block" class="block col-xs-12 col-sm-6 col-lg-3 teal">
+                        <a href="about.html" class="clearfix">
+                            <h1> ABOUT ME  </h1>
+                            <div class="bio-icon center">
+                                <i class="fa fa-hand-peace-o" aria-hidden="true"></i>
+                                <h2 class="sliding-middle-out"></h2>
+                            </div>
+                        </a>
                     </div>
-                </div>
-                <div class="welcome-block block col-lg-3 visible-lg teal">
-                    <div class="welcome col-sm-12">
-                        <h1> HEY! </h1>
-                        <h2> Lets build something great!</h2>
-                    </div>
-                </div>
-                <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
-                    <a href="portfolio.html">
-                        <h1> PAST PROJECTS </h1>
-                        <div class="experience-icon center">
-                            <i class="fa fa-laptop"></i>
-                            <h2 class="sliding-middle-out"></h2>
+                    <div class="block col-lg-3 visible-lg darkblue"></div>
+                    <div class="welcome-block block col-xs-12 col-sm-6 col-lg-3 hidden-xs hidden-lg darkblue">
+                        <div class="welcome col-sm-12">
+                            <h1> WELCOME </h1>
+                            <h2> My name is Matt Catellier.</h2>
+                            <h2> I'm a full-stack web developer. </h2>
+                            <h2> This is my online portfolio. </h2>
                         </div>
-                    </a>
-                </div>
-                <div class="welcome-block block col-lg-3 visible-lg teal">
-                    <div class="welcome col-sm-12">
-                        <h1> WELCOME </h1>
-                        <h2> My name is Matt Catellier.</h2>
-                        <h2> I'm a full-stack developer. </h2>
-                        <h2> This is my online portfolio. </h2>
                     </div>
-                </div>
-                <div id="contact-block-main" class="block col-xs-12 col-sm-6 col-lg-3 hidden-lg teal">
-                    <a href="contact.html">
-                        <h1> CONTACT INFO </h1>
-                        <div class="contact-icon center">
-                            <i class="fa fa-paper-plane-o"></i>
-                            <h2 class="sliding-middle-out"></h2>
+                    <div class="socail-block block col-lg-3 visible-lg white">
+                        <h1> Find me on:</h1>
+                        <div class="socail-icons center clearfix">
+                            <div class="icon darkblue">
+                                <a href="https://ca.linkedin.com/in/matthew-catellier-06995167"> <i class="fa fa-linkedin"></i> </a>
+                            </div>
+                            <div class="icon darkblue">
+                                <a href="https://github.com/matt-catellier" class="github"> <i class="fa fa-github"></i> </a>
+                            </div>
+                            <div class="icon darkblue">
+                                <a href="http://stackoverflow.com/users/5724880/matt-catellier"> <i class="fa fa-stack-overflow"></i> </a>
+                            </div>
                         </div>
-                    </a>
-                </div>
-                <div class="block col-lg-3 visible-lg pattern"></div>
-                <div class="block col-lg-3 visible-lg pattern"></div>
-                <div class="block col-lg-3 visible-lg blank white">
-                </div>
-                <div id="contact-block" class="block col-lg-3 visible-lg darkblue">
-                    <a href="contact.html">
-                        <h1> CONTACT INFO </h1>
-                        <div class="contact-icon center">
-                            <i class="fa fa-paper-plane-o"></i>
-                            <h2 class="sliding-middle-out"></h2>
+                    </div>
+                    <div class="welcome-block block col-lg-3 visible-lg teal">
+                        <div class="welcome col-sm-12">
+                            <h1> HEY! </h1>
+                            <h2> Lets build something great!</h2>
                         </div>
-                    </a>
-                </div>
-                <div class="block col-lg-3 visible-lg white"></div>
-                <div id="socail-block" class="block socail-block col-xs-12 col-sm-6 col-lg-3 hidden-lg white">
-                    <h1> Find me on:</h1>
-                    <div class="socail-icons center clearfix">
-                        <div class="icon darkblue"><a href="https://ca.linkedin.com/in/matthew-catellier-06995167"> <i class="fa fa-linkedin"></i> </a> </div>
-                        <div class="icon darkblue"><a href="https://github.com/matt-catellier" class="github"> <i class="fa fa-github"></i> </a> </div>
-                        <div class="icon darkblue"><a href="http://stackoverflow.com/users/5724880/matt-catellier"> <i class="fa fa-stack-overflow"></i> </a></div>
-                        <noscript>
+                    </div>
+                    <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
+                        <a href="portfolio.html">
+                            <h1> PAST PROJECTS </h1>
+                            <div class="experience-icon center">
+                                <i class="fa fa-laptop"></i>
+                                <h2 class="sliding-middle-out"></h2>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="welcome-block block col-lg-3 visible-lg teal">
+                        <div class="welcome col-sm-12">
+                            <h1> WELCOME </h1>
+                            <h2> My name is Matt Catellier.</h2>
+                            <h2> I'm a full-stack developer. </h2>
+                            <h2> This is my online portfolio. </h2>
+                        </div>
+                    </div>
+                    <div id="contact-block-main" class="block col-xs-12 col-sm-6 col-lg-3 hidden-lg teal">
+                        <a href="contact.html">
+                            <h1> CONTACT INFO </h1>
+                            <div class="contact-icon center">
+                                <i class="fa fa-paper-plane-o"></i>
+                                <h2 class="sliding-middle-out"></h2>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="block col-lg-3 visible-lg pattern"></div>
+                    <div class="block col-lg-3 visible-lg pattern"></div>
+                    <div class="block col-lg-3 visible-lg blank white">
+                    </div>
+                    <div id="contact-block" class="block col-lg-3 visible-lg darkblue">
+                        <a href="contact.html">
+                            <h1> CONTACT INFO </h1>
+                            <div class="contact-icon center">
+                                <i class="fa fa-paper-plane-o"></i>
+                                <h2 class="sliding-middle-out"></h2>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="block col-lg-3 visible-lg white"></div>
+                    <div id="socail-block" class="block socail-block col-xs-12 col-sm-6 col-lg-3 hidden-lg white">
+                        <h1> Find me on:</h1>
+                        <div class="socail-icons center clearfix">
+                            <div class="icon darkblue">
+                                <a href="https://ca.linkedin.com/in/matthew-catellier-06995167"> <i class="fa fa-linkedin"></i> </a>
+                            </div>
+                            <div class="icon darkblue">
+                                <a href="https://github.com/matt-catellier" class="github"> <i class="fa fa-github"></i> </a>
+                            </div>
+                            <div class="icon darkblue">
+                                <a href="http://stackoverflow.com/users/5724880/matt-catellier"> <i class="fa fa-stack-overflow"></i> </a>
+                            </div>
+                            <noscript>
                             <p><b> Please enable JavaScript! </b></p>
                         </noscript>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="footer">
+                <p>Copyright © Matt Catellier 2016.</p>
+            </div>
         </div>
-        <div class="footer">
-            <p>Copyright © Matt Catellier 2016.</p>
-        </div>
-    </div>
-</body>
+    </body>
+
 </html>
