Added livereload dev server via 'node_modules/.bin/grunt server'

--- a/public/about.html
+++ b/public/about.html
@@ -61,7 +61,7 @@
                         <div class="left-column clearfix col-xs-12 col-sm-6 white">
                             <div class="heading">
                                 <img src="images/headshot.jpg" alt="professional headshot">
-                                <h1>WHO I AM</h1>
+                                <h1>WHO AM I?</h1>
                             </div>
                             <p>I am a technically minded individual, who is passionate about learning new technologies and software development. Full stack developer with experience using industry leading technologies. Constantly looking to improve myself
                                 and the world around me. Willing to go above and beyond to do so</p>
