Fixed vertical alignment issue by removing windowResize.js from grunt tasks

--- a/public/about.html
+++ b/public/about.html
@@ -24,7 +24,6 @@
         <link rel="stylesheet" href="styles/about.css">
 
         <script src="build/app.js" defer></script>
-        <!--<script src="scripts/windowResize.js" defer></script>-->
         <script>
             $(function() {
                 var height = $('.right-column').height() + 10;
@@ -37,6 +36,7 @@
                 });
             });
         </script>
+        <meta name="viewport" content="width=device-width">
     </head>
 
     <body>
@@ -111,7 +111,7 @@
 
                 </div>
             </div>
-            <div class="footer">
+            <div class="footer clearfix">
                 <p> Copyright © Matt Catellier 2016. </p>
             </div>
         </div>
