--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
             }
         </style>
 
+        <meta name="viewport" content="width=device-width">
+
     </head>
 
     <body>
@@ -56,13 +58,13 @@
                             <li><a href="contact.html"><h1>CONTACT INFO</h1></a></li>
                         </ul>
                     </nav>
-                    <div id="logo-block" class="block col-xs-12 col-sm-6 col-lg-3 logo white">
+                    <div id="logo-block" class="block col-xs-12 col-md-6 col-lg-3 logo white">
                         <div class="logo center">
                             <img src="images/logo.png" alt="logo">
                             <h1> Matt Catellier </h1>
                         </div>
                     </div>
-                    <div id="about-block" class="block col-xs-12 col-sm-6 col-lg-3 teal">
+                    <div id="about-block" class="block col-xs-12 col-md-6 col-lg-3 teal">
                         <a href="about.html" class="clearfix">
                             <h1> ABOUT ME  </h1>
                             <div class="bio-icon center">
@@ -72,7 +74,7 @@
                         </a>
                     </div>
                     <div class="block col-lg-3 visible-lg darkblue"></div>
-                    <div class="welcome-block block col-xs-12 col-sm-6 col-lg-3 hidden-xs hidden-lg darkblue">
+                    <div class="welcome-block block col-xs-12 col-md-6 col-lg-3 hidden-sm hidden-lg darkblue">
                         <div class="welcome col-sm-12">
                             <h1> WELCOME </h1>
                             <h2> My name is Matt Catellier.</h2>
@@ -100,7 +102,7 @@
                             <h2> Lets build something great!</h2>
                         </div>
                     </div>
-                    <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
+                    <div id="portfolio-block" class="block col-xs-12 col-md-6 col-lg-3 white">
                         <a href="portfolio.html">
                             <h1> PAST PROJECTS </h1>
                             <div class="experience-icon center">
@@ -117,7 +119,7 @@
                             <h2> This is my online portfolio. </h2>
                         </div>
                     </div>
-                    <div id="contact-block-main" class="block col-xs-12 col-sm-6 col-lg-3 hidden-lg teal">
+                    <div id="contact-block-main" class="block col-xs-12 col-md-6 col-lg-3 hidden-lg darkblue">
                         <a href="contact.html">
                             <h1> CONTACT INFO </h1>
                             <div class="contact-icon center">
@@ -130,7 +132,7 @@
                     <div class="block col-lg-3 visible-lg pattern"></div>
                     <div class="block col-lg-3 visible-lg blank white">
                     </div>
-                    <div id="contact-block" class="block col-lg-3 visible-lg darkblue">
+                    <div id="contact-block" class="block col-lg-3 visible-lg teal">
                         <a href="contact.html">
                             <h1> CONTACT INFO </h1>
                             <div class="contact-icon center">
@@ -140,7 +142,7 @@
                         </a>
                     </div>
                     <div class="block col-lg-3 visible-lg white"></div>
-                    <div id="socail-block" class="block socail-block col-xs-12 col-sm-6 col-lg-3 hidden-lg white">
+                    <div id="socail-block" class="block socail-block col-xs-12 col-md-6 col-lg-3 hidden-lg white">
                         <h1> Find me on:</h1>
                         <div class="socail-icons center clearfix">
                             <div class="icon darkblue">
@@ -159,7 +161,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">
+            <div class="footer clearfix">
                 <p>Copyright © Matt Catellier 2016.</p>
             </div>
         </div>
