--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -25,8 +25,6 @@
         <link rel="stylesheet" href="styles/projects.css">
 
         <script src="build/app.js" defer></script>
-
-        <!--<script src="scripts/windowResize.js" defer></script>-->
         <script>
             $(function() {
                 var height = $('.right-column').height() + 10;
@@ -39,6 +37,7 @@
                 });
             });
         </script>
+        <meta name="viewport" content="width=device-width">
     </head>
 
     <body>
@@ -87,7 +86,7 @@
 
                 </div>
             </div>
-            <div class="footer">
+            <div class="footer clearfix">
                 <p> Copyright © Matt Catellier 2016. </p>
             </div>
         </div>
