--- a/public/contact.html
+++ b/public/contact.html
@@ -38,6 +38,7 @@
                 });
             });
         </script>
+        <meta name="viewport" content="width=device-width">
     </head>
 
     <body>
@@ -151,7 +152,7 @@
 
                 </div>
             </div>
-            <div class="footer">
+            <div class="footer clearfix">
                 <p> Copyright © Matt Catellier 2016.</p>
             </div>
         </div>
