--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -51,11 +51,12 @@
                         <i class="fa fa-bars" aria-hidden="true" title="Skip to main navigation"></i>
                     </div>
                     <nav class="clearfix">
+                        <span class="x-icon"><i class="fa fa-times" aria-hidden="true"></i></span>
                         <ul class="clearfix">
                             <li><a href="index.html"><h1>HOME</h1></a></li>
-                            <li><a href="about.html"><h1>ABOUT ME</h1></a></li>
-                            <li><a href="portfolio.html"><h1>PAST PROJECTS</h1></a></li>
-                            <li><a href="contact.html"><h1>CONTACT INFO</h1></a></li>
+                            <li><a href="about.html"><h1>ABOUT</h1></a></li>
+                            <li><a href="portfolio.html"><h1>EXPERIENCE</h1></a></li>
+                            <li><a href="contact.html"><h1>CONTACT </h1></a></li>
                         </ul>
                     </nav>
                     <div class="columns col-xs-12">
