--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,12 @@
                         <i class="fa fa-bars" aria-hidden="true" title="Skip to main navigation"></i>
                     </div>
                     <nav class="clearfix">
+                        <span class="x-icon"><i class="fa fa-times" aria-hidden="true"></i></span>
                         <ul class="clearfix">
                             <li><a href="index.html"><h1>HOME</h1></a></li>
-                            <li><a href="about.html"><h1>ABOUT ME</h1></a></li>
-                            <li><a href="portfolio.html"><h1>PAST PROJECTS</h1></a></li>
-                            <li><a href="contact.html"><h1>CONTACT INFO</h1></a></li>
+                            <li><a href="about.html"><h1>ABOUT</h1></a></li>
+                            <li><a href="portfolio.html"><h1>EXPERIENCE</h1></a></li>
+                            <li><a href="contact.html"><h1>CONTACT </h1></a></li>
                         </ul>
                     </nav>
                     <div id="logo-block" class="block col-xs-12 col-sm-6 col-lg-3 logo white">
@@ -103,7 +104,7 @@
                     </div>
                     <div id="portfolio-block" class="block col-xs-12 col-sm-6 col-lg-3 white">
                         <a href="portfolio.html">
-                            <h1> PAST PROJECTS </h1>
+                            <h1> EXPERIENCE </h1>
                             <div class="experience-icon center">
                                 <i class="fa fa-laptop"></i>
                                 <h2 class="sliding-middle-out"></h2>
@@ -171,7 +172,7 @@
             <path d='M28 0L28 34L0 50L0 84L28 100L56 84L56 50L28 34' fill='none' stroke='#127486' stroke-width='4'/>
         </svg>
         <script>
-            // Encode an SVG element as a base64 data uri.
+            // Encode an SVG element as a base64 data uri. PATTERN
             function svgToBase64Image(svgElement) {
                 var div = document.createElement('div');
                 div.appendChild(svgElement.cloneNode(true));
@@ -187,8 +188,6 @@
             for (var i = 0; i < divs.length; i++) {
                 divs[i].style.background = url;
             }
-            // .background = url;
-            // document.body.style.background = url;
         </script>
     </body>
 
