--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
                     <nav class="clearfix">
                         <span class="x-icon"><i class="fa fa-times" aria-hidden="true"></i></span>
                         <ul class="clearfix">
-                            <li><a href="index.html"><h1>HOME</h1></a></li>
-                            <li><a href="about.html"><h1>ABOUT</h1></a></li>
-                            <li><a href="portfolio.html"><h1>EXPERIENCE</h1></a></li>
-                            <li><a href="contact.html"><h1>CONTACT </h1></a></li>
+                            <li><a href=""><h1>HOME</h1></a></li>
+                            <li><a href="about"><h1>ABOUT</h1></a></li>
+                            <li><a href="experience"><h1>EXPERIENCE</h1></a></li>
+                            <li><a href="contact"><h1>CONTACT </h1></a></li>
                         </ul>
                     </nav>
                     <div id="logo-block" class="block col-xs-12 col-sm-6 col-lg-3 logo white">
