--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -53,10 +53,10 @@
                     <nav class="clearfix">
                         <span class="x-icon"><i class="fa fa-times" aria-hidden="true"></i></span>
                         <ul class="clearfix">
-                            <li><a href=""><h1>HOME</h1></a></li>
-                            <li><a href="about"><h1>ABOUT</h1></a></li>
-                            <li><a href="experience"><h1>EXPERIENCE</h1></a></li>
-                            <li><a href="contact"><h1>CONTACT </h1></a></li>
+                            <li><a href="/"><h1>HOME</h1></a></li>
+                            <li><a href="/about"><h1>ABOUT</h1></a></li>
+                            <li><a href="/experience"><h1>EXPERIENCE</h1></a></li>
+                            <li><a href="/contact"><h1>CONTACT </h1></a></li>
                         </ul>
                     </nav>
                     <div class="columns col-xs-12">
