Working on layour for portfolio page

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -62,15 +62,35 @@
                     <div class="columns col-xs-12">
                         <div class="left-column clearfix col-xs-12 col-sm-6 white">
                             <div class='project write-up'>
-                                <h4>  Project 2 - Write-up </h4>
+                                <h2>  Project 2 - Write-up </h2>
                                 <p> This is some text about write-up. This is some text about write-up. This is some text about write-up. This is some text about write-up. This is some text about write-up. This is some text about write-up. </p>
                             </div>
                             <div class='project write-up'>
-                                <h4>  Project 1 - Write-up </h4>
-                                <p> This is some text about write-up. This is some text about write-up. This is some text about write-up. This is some text about write-up. This is some text about write-up. This is some text about write-up. </p>
+                                <div class='visible-xs'>
+                                    <iframe src="http://ami.responsivedesign.is/?url=http://artvancouver.net/">
+                                      <p>Your browser does not support iframes.</p>
+                                    </iframe>
+                                </div>
+                                <h2>  Art! Vancouver </h2>
+                                <h1>
+                                    <span class="skill teal">jQuery</span>
+                                    <span class="skill teal"> CSS </span>
+                                    <span class="skill teal"> PHP</span>
+                                </h1>
+                                <a href="http://artvancouver.net/" class="view-site"> VIEW SITE </a>
+                                <p> Created a custom child theme using Wordpress, to add in a mobile responsive
+                                     nav-bar and improve the overall usability of the app.</p>
+                            </div>
+                            <div class="switches visible-xs">
+                                <div class="switch-up col-xs-6 teal">
+                                    <i class="fa fa-arrow-up center" aria-hidden="true"></i>
+                                </div>
+                                <div class="switch-down col-xs-6 darkblue">
+                                    <i class="fa fa-arrow-down center" aria-hidden="true"></i>
+                                </div>
                             </div>
                         </div>
-                        <div class="right-column clearfix col-xs-12 col-sm-6 light-grey">
+                        <div class="right-column clearfix col-xs-12 col-sm-6 light-grey hidden-xs">
                             <div class="switches">
                                 <div class="switch-up col-xs-6 teal">
                                     <i class="fa fa-arrow-up center" aria-hidden="true"></i>
@@ -79,7 +99,11 @@
                                     <i class="fa fa-arrow-down center" aria-hidden="true"></i>
                                 </div>
                             </div>
-                            <div class='project'> Project 1 - image </div>
+                            <div class='project'>
+                                <iframe src="http://ami.responsivedesign.is/?url=http://artvancouver.net/">
+                                  <p>Your browser does not support iframes.</p>
+                                </iframe>
+                            </div>
                             <div class='project'> Project 2 - image </div>
 
                         </div>
