--- a/public/about.html
+++ b/public/about.html
@@ -35,7 +35,7 @@
             function resizePanel() {
                 var rightColumn = $('.right-column');
                 var leftColumn = $('.left-column');
-                if ($(window).width() >= 768) {
+                if ($(window).width() >= 767) {
                     var height = leftColumn.height() - 10;
                     rightColumn.height(height);
                 } else {
@@ -72,19 +72,19 @@
                                 <img src="images/headshot.jpg" alt="professional headshot">
                                 <h1>WHO I AM</h1>
                             </div>
-                            <p>Born and raised in Vancouver, Matt is a particularly hard working individual who has been practicing software development for the past 3 years.
-                            </p>
-                            <p> Recently his focus has been on learning Node.js, React.js and ES6. He enjoys working in teams, and collaborating to solve problems with new and exciting technology.
-                            </p>
-                            <p>His past work experience has been primarily with smaller companies where he has worn many hats, but identifies as full-stack developer. When he is not working, he can be found on the beach, and/or playing his guitar.
-                            </p>
+                            <p>Born and raised in Vancouver, BC, Matt is a particularly hard working individual who has been practicing software development for the past 3 years. </p>
+
+                            <p> Recently his focus has been on learning Node.js, React.js and ES6. He enjoys working in teams, and collaborating to solve problems with new and exciting technology. </p>
+
+                            <p>His past experience has been primarily working with smaller companies helping them with various aspects of Product Design, Project Management and Software Development. Matt enjoys wearing many hats, but identifies as full-stack
+                                developer. </p>
                         </div>
 
                         <div class="right-column clearfix col-xs-12 col-sm-6 light-grey">
                             <h1> WHAT I DO </h1>
                             <div class="col-xs-12">
                                 <h2> Front End </h2>
-                                <p>Enjoy creating rich, and responsive user experience.</p>
+                                <p>Enjoy creating rich, and responsive user experience with industry leading technologies.</p>
                                 <div class="skills">
                                     <span class="skill teal">jQuery</span>
                                     <span class="skill teal">Vue.js</span><span class="skill teal">React.js</span><span class="skill teal">Angular2</span>
@@ -94,7 +94,7 @@
                             </div>
                             <div class="col-xs-12">
                                 <h2> Back End </h2>
-                                <p> Have worked with many server-side technologies, strong understanding of SQL and OOP.</p>
+                                <p> Have worked with many different server-side stacks. Strong understanding of SQL and OOP.</p>
                                 <div class="skills">
                                     <span class="skill grey"> Java </span>
                                     <span class="skill grey">C#</span> <span class="skill grey">ASP.NET</span>
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-xs-12">
                                 <h2> Mobile </h2>
-                                <p> Have experience in native environments and with leading hybrid technologies. </p>
+                                <p> Have experience developing in both native environments and with hybrid technologies/frameworks. </p>
                                 <div class=" skills ">
                                     <span class="skill darkblue"> Android Studio </span> <span class="skill darkblue">Xcode</span> <span class="skill darkblue"> Swift </span>
                                     <span class="skill darkblue">Ionic2 </span> <span class="skill darkblue"> React Native </span> <span class="skill darkblue"> Native Script </span>
